--- a/expense_tracker_app/pubspec.yaml
+++ b/expense_tracker_app/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  #icons
   font_awesome_flutter: ^10.8.0
+  #graphs
+  fl_chart: ^0.71.0 
 
 dev_dependencies:
   flutter_test:
