--- a/expense_tracker_app/pubspec.yaml
+++ b/expense_tracker_app/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   #graphs
   fl_chart: ^0.71.0 
+  #handle date time formats
+  intl: ^0.20.2
+  #svg icons
+  flutter_svg: ^2.0.7 
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    -assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
