--- a/expense_tracker_app/pubspec.yaml
+++ b/expense_tracker_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.20.2
   #svg icons
   flutter_svg: ^2.0.7 
+  #for picking a color for a category - a color picker
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
