--- a/expense_tracker_app/pubspec.yaml
+++ b/expense_tracker_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^2.0.7 
   #for picking a color for a category - a color picker
   flutter_colorpicker: ^1.1.0
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
