--- a/expense_tracker_app/pubspec.yaml
+++ b/expense_tracker_app/pubspec.yaml
@@ -44,7 +44,11 @@ dependencies:
   flutter_svg: ^2.0.7 
   #for picking a color for a category - a color picker
   flutter_colorpicker: ^1.1.0
-  cloud_firestore: ^5.6.7
+  cloud_firestore: ^4.9.2
+
+  expense_repo:
+    path: packages/expense_repo
+
 
 dev_dependencies:
   flutter_test:
